<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/fragment_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:gravity="center"
      android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_videocam_24"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_2"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_cources"
        android:textSize="12sp"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_centerInParent="true"/>

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_margin="15dp"
       android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:layout_centerInParent="true"/>

  </LinearLayout>


</RelativeLayout>