<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_icon" />

        <TextView
            style="@style/viewParent"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />

        <TextView
            style="@style/viewParent"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="Let's join us and a better future starts here."
            android:textColor="@android:color/black"
            android:textSize="15sp"
           />

        <TextView
            style="@style/viewParent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:text="Login"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent.TextLayout"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:background="#ffffff"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent.TextLayout"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:background="#ffffff"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:clickable="true"
                android:padding="10dp"
                android:text="Skip Login"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Login" />

        </RelativeLayout>

        <TextView
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/btn_forgot_password"
            android:textColor="@color/teal_700"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/teal_700"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="By Sign Up you agree to the Privacy Policy"
            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:textSize="10sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center_vertical|center_horizontal|center"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
